[package]
name = "themisdb-client"
version = "0.1.0-beta.1"
edition = "2021"
description = "Rust SDK for ThemisDB - Multi-Model Database with Transaction Support"
license = "Apache-2.0"
repository = "https://github.com/makr-code/ThemisDB"
keywords = ["database", "multi-model", "transaction", "graph", "vector"]
categories = ["database"]

[lib]
name = "themisdb_sdk"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
